# omie-api

./: .env  pyproject.toml
src/api_omie/: main.py
src/config/: __init__.py
